--- a/heatmap.html
+++ b/heatmap.html
@@ -53,7 +53,7 @@
 				ctx.canvas.style.width = px(ncols);
 				ctx.canvas.style.height = px(nrows);
 				// fill the canvas to black
-				ctx.fillStyle = '#000';
+				ctx.fillStyle = '#fff';
 				ctx.fillRect(0, 0, ctx.canvas.width, ctx.canvas.height);
 				// draw each data point
 				data.forEach((row, latNdx) => {
@@ -76,10 +76,10 @@
 			}
 			 
 			const hsl = (h, s, l) => {
-				return `hsl(${h * 360 | 0},${s * 100 | 0}%,${l * 100 | 0}%)`;
+				return `hsl(${h * 247 | 0},${s * 0 | 0}%,${l * 5 | 0}%)`;
 			}
 			
-			loadFile('population_count_5_min.asc').then(parseData).then(drawData);
+			loadFile('waterarea_5_min.asc').then(parseData).then(drawData);
 			
 			const download = () => {
 				const canvas = document.querySelector('canvas');
@@ -89,7 +89,7 @@
 				createEl.href = canvasUrl;
 
 				// This is the name of our downloaded file
-				createEl.download = "popcount";
+				createEl.download = "waterarea";
 
 				// Click the download button, causing a download, and then remove it
 				createEl.click();
