--- a/worlddata.html
+++ b/worlddata.html
@@ -9,14 +9,20 @@
 				}
 			}
 		</script>
-		<script type="module" src="../worlddata.js"></script>
+		<script type="module" src="worlddata.js"></script>
 		<link rel="stylesheet" href="main.css" />
 	</head>
 	<body>
+		
 		<div id="loading">
 			<div class="progress"><div class="progressbar"></div></div>
 		</div>
 		<canvas id="c">
 		</canvas>
+		<div id="datatabs">
+			<div class="maptab" id="electricity">Electricity</div>
+			<div class="maptab" id="population">Population</div>
+			<div class="maptab" id="water">Water</div>
+		</div>
 	</body>
 </html>
