--- a/editor.html
+++ b/editor.html
@@ -19,6 +19,24 @@
 		</div>
 		<canvas id="c">
 		</canvas>
+		<div id="tabs">
+			<div id="tabheader">
+			</div>
+			<div id="linkdata">
+				<input id="linkdataname" type="text" placeholder="Name" /><br/>
+				<input id="linkdatalink" type="text" placeholder="Link" /><br/>
+				<input id="linkdatastereo" type="checkbox" placeholder="false" hidden="true"/><br/>
+				<div id="positions">
+					<div class="plink"> 
+						S: <input id="pls_pic_1" type="number" placeholder "1.0"/>
+						X: <input id="plx_pic_1" type="number" placeholder "0.0"/>
+						Y: <input id="ply_pic_1" type="number" placeholder "-1.6"/>
+						Z: <input id="plz_pic_1" type="number" placeholder "0.0"/>
+					</div>
+				</div>
+				<div id="createposition">🔗</div>
+			</div>
+		</div>
 		<div id="create">➕</div>
 		<div id="newlink">
 			<div id="close"><span class="close">❌</span></div>
