--- a/editor.html
+++ b/editor.html
@@ -26,15 +26,16 @@
 				<input id="linkdataname" type="text" placeholder="Name" /><br/>
 				<input id="linkdatalink" type="text" placeholder="Link" /><br/>
 				<input id="linkdatastereo" type="checkbox" placeholder="false" hidden="true"/><br/>
+				<div id="createposition">🔗</div><br/>
 				<div id="positions">
 					<div class="plink"> 
-						S: <input id="pls_pic_1" type="number" placeholder "1.0"/>
-						X: <input id="plx_pic_1" type="number" placeholder "0.0"/>
-						Y: <input id="ply_pic_1" type="number" placeholder "-1.6"/>
-						Z: <input id="plz_pic_1" type="number" placeholder "0.0"/>
+						<div> S: <input id="pls_pic_1" type="number" placeholder "1.0"/></div>
+						<div> X: <input id="plx_pic_1" type="number" placeholder "0.0"/></div>
+						<div> Y: <input id="ply_pic_1" type="number" placeholder "-1.6"/></div>
+						<div> Z: <input id="plz_pic_1" type="number" placeholder "0.0"/></div>
+						<div> 🗑️ </div>
 					</div>
 				</div>
-				<div id="createposition">🔗</div>
 			</div>
 		</div>
 		<div id="create">➕</div>
@@ -43,6 +44,12 @@
 			<input id="linkname" type="text" placeholder="Name" /><br/>
 			<input id="linklink" type="text" placeholder="Link" /><br/>
 			<button id="newlinkbtn"> Add </button>
+		</div>
+		<div id="newplink">
+			<div id="closepl"><span class="close">❌</span></div>
+			<select name="LinkTo" id="picklink">
+			</select><br/>
+			<button id="newplinkbtn"> Add </button>
 		</div>
 	</body>
 	<script>
