visual position link positioner
finally, yeah? Next should be the exporter so we wrap this up. But I'm getting excited, how about saving and loading my very own JSON variant.

--- a/editor.html
+++ b/editor.html
@@ -27,15 +27,7 @@
 				<input id="linkdatalink" type="text" placeholder="Link" /><br/>
 				<input id="linkdatastereo" type="checkbox" placeholder="false" hidden="true"/><br/>
 				<div id="createposition">🔗</div><br/>
-				<div id="positions">
-					<div class="plink"> 
-						<div> S: <input id="pls_pic_1" type="number" placeholder "1.0"/></div>
-						<div> X: <input id="plx_pic_1" type="number" placeholder "0.0"/></div>
-						<div> Y: <input id="ply_pic_1" type="number" placeholder "-1.6"/></div>
-						<div> Z: <input id="plz_pic_1" type="number" placeholder "0.0"/></div>
-						<div> 🗑️ </div>
-					</div>
-				</div>
+				<div id="positions"></div>
 			</div>
 		</div>
 		<div id="create">➕</div>
