Fixed Scaling pickableObj  Bug

--- a/editor.html
+++ b/editor.html
@@ -43,6 +43,10 @@
 			</select><br/>
 			<button id="newplinkbtn"> Add </button>
 		</div>
+		<div id="menu">
+			<img src="humangle-logo"/>
+			Export Save Load
+		</div>
 	</body>
 	<script>
 		
