--- a/test.html
+++ b/test.html
@@ -9,8 +9,8 @@
 				}
 			}
 		</script>
-		<script type="module" src="test.js"></script>
-		<link rel="stylesheet" href="main.css" />
+		<script type="module" src="./test.js"></script>
+		<link rel="stylesheet" href="./main.css" />
 	</head>
 	<body>
 		<div id="loading">
