--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--
-	This is the ImageBitmapLoader version, can be made to work offline as it is off the main thread
-	Test1 is the TextureLoader (main thread) version, testing both as we scale number of images to see trade-offs
--->
 <html>
 	<head>
 		<script  type="importmap">
@@ -107,7 +103,7 @@
 						console.log("already in memory: using that to save resources");
 					}
 					for (const b in view[viewname]){
-						if (b!="img" && b!="stereo" && viewTextures[b] == undefined){
+						if (b!="img" && viewTextures[b] == undefined){
 							const sTX = await loader.loadAsync(view[b].img);
 							const sphereTextureX = new THREE.CanvasTexture(sTX);
 							sphereTextureX.colorSpace = THREE.SRGBColorSpace;
@@ -147,16 +143,16 @@
 						for (const c in pickableObjs.children){
 							let btnMesh = pickableObjs.children[c];
 							let ln = pickableObjs.children[c].name;
-							if (ln!="img" && ln!="stereo" && newView[ln] != undefined && newView[ln].s != 0) {
+							if (ln!="img" && newView[ln] != undefined && newView[ln].s != 0) {
 								console.log(ln + "is a link under " + viewname + " view");
 								btnMesh.position.set(newView[ln].x, newView[ln].y, newView[ln].z);
 								btnMesh.scale.set(newView[ln].s, newView[ln].s/2, newView[ln].s);
 								btnMesh.visible = true;
-							} else if (ln!="img" && ln!="stereo" && newView[ln] != undefined && newView[ln].s == 0) {
+							} else if (ln!="img" && newView[ln] != undefined && newView[ln].s == 0) {
 								btnMesh.position.set(newView[ln].x, newView[ln].y, newView[ln].z);
 								btnMesh.scale.set(newView[ln].s, newView[ln].s/2, newView[ln].s);
 								btnMesh.visible = false;
-							} else if (ln!="img" && ln!="stereo" && newView[ln] == undefined){
+							} else if (ln!="img" && newView[ln] == undefined){
 								btnMesh.position.set(0, -1.6, 0);
 								btnMesh.scale.set(1, 0.5, 1);
 								btnMesh.visible = false;
@@ -326,27 +322,25 @@
 			//texture view/link properties
 			const links = {
 				"header": {
-					"version": 0.1,
+					"version": 0.2,
+					"stereo": false,
 					"index": "PIC_1"
 				},
 				"lite": {
 					"PIC_1": {
-						"img": "https://raw.githubusercontent.com/LearningMike/360images/main/PIC_1-min.jpg",
-						"stereo": false,
+						"img": "https://raw.githubusercontent.com/LearningMike/360images/main/PIC_1-ity.jpg",
 						"PIC_1": {"s": 0, "x": 0, "y": -1.6, "z": 0},
 						"PIC_2": {"s": 4, "x": 16.55099055399931, "y": -74.61338152995376, "z": 47.527970799803576},
 						"PIC_3": {"s": 2, "x": -7.500365624785212, "y": -44.45476799258078, "z": 77.894275259613}
 					},
 					"PIC_2": {
-						"img": "https://raw.githubusercontent.com/LearningMike/360images/main/PIC_2-min.jpg",
-						"stereo": false,
+						"img": "https://raw.githubusercontent.com/LearningMike/360images/main/PIC_2-ity.jpg",
 						"PIC_1": {"s": 4, "x": -3.337599303613126, "y": -72.62642809294218, "z": -53.04962180213184},
 						"PIC_2": {"s": 0, "x": 0, "y": -1.6, "z": 0},
 						"PIC_3": {"s": 4, "x": -38.36253246210393, "y": -60.22175457229724, "z": 54.78737426933343}
 					},
 					"PIC_3": {
-						"img": "https://raw.githubusercontent.com/LearningMike/360images/main/PIC_3-min.jpg",
-						"stereo": false,
+						"img": "https://raw.githubusercontent.com/LearningMike/360images/main/PIC_3-ity.jpg",
 						"PIC_1": {"s": 2, "x": -32.01658952848355, "y": -43.63286582217034, "z": -71.91043745597072},
 						"PIC_2": {"s": 4, "x": -7.067563684490447, "y": -59.4001501164843, "z": -67.2433766976704},
 						"PIC_3": {"s": 0, "x": 0, "y": -1.6, "z": 0}
@@ -355,21 +349,18 @@
 				"full": {
 					"PIC_1": {
 						"img": "https://raw.githubusercontent.com/LearningMike/360images/main/PIC_1.jpg",
-						"stereo": false,
 						"PIC_1": {"s": 0, "x": 0, "y": -1.6, "z": 0},
 						"PIC_2": {"s": 4, "x": 16.55099055399931, "y": -74.61338152995376, "z": 47.527970799803576},
 						"PIC_3": {"s": 2, "x": -7.500365624785212, "y": -44.45476799258078, "z": 77.894275259613}
 					},
 					"PIC_2": {
 						"img": "https://raw.githubusercontent.com/LearningMike/360images/main/PIC_2.jpg",
-						"stereo": false,
 						"PIC_1": {"s": 4, "x": -3.337599303613126, "y": -72.62642809294218, "z": -53.04962180213184},
 						"PIC_2": {"s": 0, "x": 0, "y": -1.6, "z": 0},
 						"PIC_3": {"s": 4, "x": -38.36253246210393, "y": -60.22175457229724, "z": 54.78737426933343}
 					},
 					"PIC_3": {
 						"img": "https://raw.githubusercontent.com/LearningMike/360images/main/PIC_3.jpg",
-						"stereo": false,
 						"PIC_1": {"s": 2, "x": -32.01658952848355, "y": -43.63286582217034, "z": -71.91043745597072},
 						"PIC_2": {"s": 4, "x": -7.067563684490447, "y": -59.4001501164843, "z": -67.2433766976704},
 						"PIC_3": {"s": 0, "x": 0, "y": -1.6, "z": 0}
