--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 		<canvas id="c">
 		</canvas>
 		<div id="tabs">
+			<div id="intro">
+				Click on + below to start creating your experience.<br>
+				For further information, read the <a href="https://github.com/HumAngle">documentation</a>.
+			</div>
 			<div id="tabheader">
 			</div>
 			<div id="linkdata">
@@ -57,11 +61,10 @@
 			</form>
 		</div>
 		<div id="menu">
-			<span>Export</span>
-			<span>Save</span>
-			<span>Load</span> | 
-			<span>Stereo</span>
-			<span>Index</span>
+			<span class="bmoption">Export</span>
+			<span class="bmoption">Save</span>
+			<span class="bmoption">Load</span>
+			<span class="bmoption" id="errorlog">|</span>
 		</div>
 	</body>
 	<script>
