position link UI update
plus the beginnings of HVRJ

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<input id="linkdatalink" type="text" placeholder="Link" /><br/>
 				<input id="linkdatastereo" type="checkbox" placeholder="false" hidden="true"/><br/>
 				<div id="positionbox">
-					<div id="createposition"> Create a Connection <i class="fa fa-link" aria-hidden="true"></i></div><br/>
+					<div id="createposition"> Create a Connection 🔗 </div>
 					<div id="positions"></div>
 				</div>
 			</div>
@@ -61,15 +61,15 @@
 			</form>
 		</div>
 		<div id="menu">
-			<span class="bmoption">
+			<span class="bmoption" id="export">
 				<i class="fa fa-download" aria-hidden="true"></i>
 				Export
 			</span>
-			<span class="bmoption">
+			<span class="bmoption" id="save">
 				<i class="fa fa-save" aria-hidden="true"></i>
 				Save
 			</span>
-			<span class="bmoption">
+			<span class="bmoption" id="load">
 				<i class="fa fa-file-text-o" aria-hidden="true"></i>
 				Load
 			</span>
