--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		/>
 		<meta
 			property="og:image"
-			content="./assets/hvrt2.png"
+			content="https://raw.githubusercontent.com/Humangle/VRTourEditor/refs/heads/main/assets/hvrt2.png"
 		/>
 		<meta property="og:url" content="https://humangle.github.io/VRTourEditor" />
 		<meta name="twitter:card" content="summary_large_image" />
