--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				<div id="errora"></div>
 				<div id="close"><span class="close"><div id="create"><i class="fa fa-times" aria-hidden="true"></i></div></span></div>
 				<input id="linkname" type="text" placeholder="Name" minlength="3" required /><br/>
-				<input id="linklink" type="text" placeholder="Link to PNG/JPEG" pattern=".*g$" required /><br/>
+				<input id="linklink" type="text" placeholder="Link to PNG/JPEG" pattern="https?:\/\/.*\.(jpg|jpeg|png)" required /><br/>
 				<input type="submit" id="newlinkbtn" value=" Add "/>
 			</form>
 		</div>
