--- a/sample/index.html
+++ b/sample/index.html
@@ -9,6 +9,7 @@
 				}
 			}
 		</script>
+		<script async src="https://unpkg.com/es-module-shims@1.8.0/dist/es-module-shims.js"></script>
 		<script type="module" src="./index.js"></script>
 		<link rel="stylesheet" href="./main.css" />
 		<meta charset="utf-8" />
