--- a/sample/index.html
+++ b/sample/index.html
@@ -4,12 +4,12 @@
 		<script  type="importmap">
 			{
 				"imports": {
-					"three": "https://cdn.jsdelivr.net/npm/three@0.162.0/build/three.module.js",
-					"three/addons/" : "https://cdn.jsdelivr.net/npm/three@0.162.0/examples/jsm/"
+					"three": "https://cdn.jsdelivr.net/npm/three@0.152.0/build/three.module.js",
+					"three/addons/" : "https://cdn.jsdelivr.net/npm/three@0.152.0/examples/jsm/"
 				}
 			}
 		</script>
-		<script async src="https://unpkg.com/es-module-shims@1.8.0/dist/es-module-shims.js"></script>
+		<!--<script async src="https://unpkg.com/es-module-shims@1.8.0/dist/es-module-shims.js"></script>-->
 		<script type="module" src="./index.js"></script>
 		<link rel="stylesheet" href="./main.css" />
 		<meta charset="utf-8" />
