--- a/sample/test.html
+++ b/sample/test.html
@@ -14,6 +14,9 @@
 		</div>
 		<div id="c">
 		</div>
+		<!-- Import maps polyfill -->
+		<!-- Remove this when import maps will be widely supported -->
+		<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
 		<script  type="importmap">
 			{
 				"imports": {
@@ -22,7 +25,6 @@
 				}
 			}
 		</script>
-		<!--<script async src="https://unpkg.com/es-module-shims@1.8.0/dist/es-module-shims.js"></script>-->
 		<script type="module" src="./test.js"></script>
 	</body>
 </html>
